# HousePricePrediction

./: README.md
client/: CMakeLists.txt  conanfile.txt  makefile
client/.cache/clangd/index/: main.cpp.67219FFF7BFF9A76.idx
client/src/: main.cpp
protos/: endpoints.proto  example2.proto
server/: .gitignore  CMakeLists.txt  README.md  compile_commands.json  conanfile.txt  makefile
server/cache/clangd/index/: ETL.cpp.8A8E9E6F378C4C41.idx  ETL.hpp.BC7F924193D9C242.idx  global.cpp.09DEA60E68E83605.idx  global.hpp.53047CD96A5FCBC9.idx  helper.cpp.A0FBC6363060BEE6.idx  helper.hpp.4F838847A7199DDB.idx  main.cpp.F3438D7BD39EB944.idx  model.cpp.7FEBDCA52DD0ED10.idx  model.hpp.58723ADD484FB2DF.idx  server.hpp.D93205351F2DAAF4.idx
server/conan_system_recipes/lmariadbcpp/: conanfile.py
server/include/: ETL.hpp  global.hpp  helper.hpp  model.hpp  server.hpp
server/schemas/: schema.sql
server/src/: ETL.cpp  global.cpp  helper.cpp  main.cpp  model.cpp  server.cpp
